force-app/main/default/objects/MBMS_Artist__c/MBMS_Artist__c.object-meta.xml
<CustomObject>
    <description>This is an object for storing information about the Artist.</description>
    <label>Artist</label>
    <nameField>
        <label>Artist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>