force-app/main/default/objects/MBMS_Artist__c/fields/MBMS_Birthplace__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Birthplace__c</fullName>
    <description>A field that stores a birthplace (country / city) of the Artist.</description>
    <inlineHelpText>Birthplace of the artist.</inlineHelpText>
    <label>Birthplace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>