force-app/main/default/objects/MBMS_Artist__c/fields/MBMS_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Date_of_Birth__c</fullName>
    <description>A field that stores a date of birth of the Artist.</description>
    <inlineHelpText>Date of birth of the artist.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>