force-app/main/default/objects/MBMS_Artist__c/fields/MBMS_Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Date_of_Death__c</fullName>
    <description>A field that stores a date of death of the Artist.</description>
    <inlineHelpText>Date of death of the artist.</inlineHelpText>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>