force-app/main/default/objects/MBMS_Artist__c/fields/MBMS_First_Name__c.field-meta.xml
<CustomField>
    <fullName>MBMS_First_Name__c</fullName>
    <description>A field that stores a first name of the Artist.</description>
    <inlineHelpText>First name of the Artist.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>