force-app/main/default/objects/MBMS_Artist__c/fields/MBMS_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Last_Name__c</fullName>
    <description>A field that stores a last name of the Artist.</description>
    <inlineHelpText>Last name of the Artist.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>