force-app/main/default/objects/MBMS_Artist__c/fields/MBMS_Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Previous_Status__c</fullName>
    <description>A field that stores a previous status of the Artist record.</description>
    <inlineHelpText>Previous Status of the Artist record.</inlineHelpText>
    <label>Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MBMS_Status_Values</valueSetName>
    </valueSet>
</CustomField>