force-app/main/default/objects/MBMS_Artist__c/fields/MBMS_Roles__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Roles__c</fullName>
    <description>A field that stores a roles of the Artist.</description>
    <inlineHelpText>Roles of the artist.</inlineHelpText>
    <label>Roles</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MBMS_Author</fullName>
                <label>Author</label>
            </value>
            <value>
                <fullName>MBMS_Actor</fullName>
                <label>Actor</label>
            </value>
            <value>
                <fullName>MBMS_Director</fullName>
                <label>Director</label>
            </value>
            <value>
                <fullName>MBMS_Writer</fullName>
                <label>Writer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>