force-app/main/default/objects/MBMS_Artist__c/fields/MBMS_Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Status_Comment__c</fullName>
    <description>A field that stores a comment related to the status of the Artist.</description>
    <inlineHelpText>Artist status comment.</inlineHelpText>
    <label>Status Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>