force-app/main/default/objects/MBMS_Artist__c/listViews/Approvers_Queue_MBMS_Artist.listView-meta.xml
<ListView>
    <fullName>Approvers_Queue_MBMS_Artist</fullName>
    <filterScope>Queue</filterScope>
    <label>Approvers Queue</label>
    <queue>Approvers_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>